--- a/tableCell0225/Base.lproj/Main.storyboard
+++ b/tableCell0225/Base.lproj/Main.storyboard
@@ -20,12 +20,18 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="tUb-Fh-sgb">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="94" id="tUb-Fh-sgb">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="94"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tUb-Fh-sgb" id="fEs-Ak-aVX">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oES-ke-Nxb">
+                                                    <rect key="frame" x="20" y="7" width="88" height="79"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -43,28 +49,11 @@
                     <navigationItem key="navigationItem" title="Main" id="jYy-tZ-p9t"/>
                     <connections>
                         <outlet property="myTableView" destination="y2D-g6-YgZ" id="123-5o-oVw"/>
-                        <segue destination="FET-CX-Mpv" kind="show" identifier="segue1" id="ph1-hr-NxB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1002.8985507246377" y="109.82142857142857"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="H7Z-pU-6V6">
-            <objects>
-                <viewController id="FET-CX-Mpv" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rhl-3l-Qgb">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="3JB-Qd-eZw"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="9V0-tr-A8U"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iDX-GR-hsR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1003" y="830"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="se1-dl-YDJ">
