--- a/tableCell0225/Base.lproj/Main.storyboard
+++ b/tableCell0225/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="y2D-g6-YgZ">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="730"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="94" id="tUb-Fh-sgb">
@@ -36,11 +36,28 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="FHA-xi-6gC">
+                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem systemItem="edit" id="hUY-cQ-4sX">
+                                        <connections>
+                                            <action selector="editTapped:" destination="BYZ-38-t0r" id="VNu-zQ-2hv"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="319" style="plain" systemItem="fixedSpace" id="F1G-kI-zCA"/>
+                                    <barButtonItem systemItem="refresh" id="GAJ-1q-l9m">
+                                        <connections>
+                                            <action selector="refreshTapped:" destination="BYZ-38-t0r" id="uF3-kS-Cj3"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="y2D-g6-YgZ" secondAttribute="bottom" id="JM6-vF-XOz"/>
+                            <constraint firstAttribute="bottom" secondItem="y2D-g6-YgZ" secondAttribute="bottom" constant="78" id="JM6-vF-XOz"/>
                             <constraint firstItem="y2D-g6-YgZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="O4S-Kv-JOD"/>
                             <constraint firstItem="y2D-g6-YgZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XN4-Fm-wsR"/>
                             <constraint firstItem="y2D-g6-YgZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="88" id="dd8-Wa-wPY"/>
